# Position-Independent-Agent

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  sizes.json
.github/: CONTRIBUTING.md
.github/workflows/: build-android-aarch64.yml  build-android-armv7a.yml  build-android-x86_64.yml  build-freebsd-aarch64.yml  build-freebsd-i386.yml  build-freebsd-riscv64.yml  build-freebsd-x86_64.yml  build-ios-aarch64.yml  build-linux-aarch64.yml  build-linux-armv7a.yml  build-linux-i386.yml  build-linux-mips64.yml  build-linux-riscv32.yml  build-linux-riscv64.yml  build-linux-x86_64.yml  build-macos-aarch64.yml  build-macos-x86_64.yml  build-solaris-aarch64.yml  build-solaris-i386.yml  build-solaris-x86_64.yml  build-uefi-aarch64.yml  build-uefi-x86_64.yml  build-windows-aarch64.yml  build-windows-armv7a.yml  build-windows-i386.yml  build-windows-x86_64.yml  build.yml  preview-release.yml  release.yml  size-report.yml
.understand-anything/: meta.json
book-notes/: 00-INDEX.md  01-foundational-concepts.md  02-project-overview.md  03-build-system.md  04-entry-point-and-bootstrap.md  05-core-types-and-primitives.md  06-memory-and-strings.md  07-compiler-runtime.md  08-algorithms-and-math.md  09-kernel-and-syscalls.md  10-platform-abstraction.md  11-crypto.md  12-networking.md  13-beacon-and-commands.md  14-pic-transform.md  15-loaders.md  16-suggested-edits.md
cmake/: Options.cmake  PICTransform.cmake  PolyTransform.cmake  PostBuild.cmake  Sources.cmake  Target.cmake
docs/: ARCHITECTURE-MAP.md  ONBOARDING.md
docs/dashboard/: index.html  knowledge-graph.json
docs/dashboard/assets/: index-dfvm4Woa.js
loaders/python/: README.md  loader.py
loaders/windows/powershell/: loader.ps1
sizes/: 2026-03-09_07b38b5.json  2026-03-09_8dbf1c3.json  2026-03-10_1bedd38.json  2026-03-10_2bcd214.json  2026-03-10_dd0784b.json  2026-03-11_df96cc6.json  2026-03-12_6e9fc1c.json  2026-03-12_b0e72ee.json  2026-03-13_51d4b95.json  2026-03-13_6f8b779.json  2026-03-13_7fc2798.json  2026-03-13_a9332e1.json  2026-03-14_78c4d74.json  2026-03-15_3cb23b4.json  2026-03-16_3fd35ef.json  2026-03-16_a0a7765.json  2026-03-17_3c298c7.json  2026-03-17_74127d6.json  2026-03-17_a4ea8df.json  2026-03-17_ae7f6fc.json  2026-03-17_e2ab70d.json  2026-03-17_ec8959e.json  2026-03-18_7639fc2.json  2026-03-18_85c1b09.json  2026-03-19_01d442a.json  2026-03-19_362ef70.json  2026-03-19_42f2bd4.json  2026-03-19_906a18c.json  2026-03-19_a3db8ab.json  2026-03-19_a5dd324.json  2026-03-19_d8fbc5c.json  2026-03-19_da5b0fc.json  2026-03-19_e37aa29.json  2026-03-20_6494a26.json  2026-03-20_e6926bb.json  2026-03-21_02a99bc.json  2026-03-21_123d984.json  2026-03-21_1a3a9f8.json  2026-03-21_302c7fa.json  2026-03-21_91f80b0.json  (+21 more)
src/: README.md  commands.h  commandsHandler.cc  entry_point.cc  main.cc  shell.cc  shell.h  vnc.h
src/beacon/: README.md  commandsHandler.cc  main.cc  shell.cc
src/core/: README.md
src/core/compiler/: compiler_runtime.armv7a.cc
src/core/types/: error.h  ip_address.cc
src/lib/: README.md  runtime.h
src/lib/crypto/: chacha20.cc  chacha20_encoder.cc  chacha20_encoder.h  ecc.cc  sha2.cc
src/lib/image/: image_processor.cc  image_processor.h  jpeg_encoder.cc
src/lib/network/dns/: dns_client.cc  dns_client.h
src/lib/network/http/: http_client.cc  http_client.h
src/lib/network/tls/: tls_buffer.cc  tls_buffer.h  tls_cipher.cc  tls_cipher.h  tls_client.cc  tls_client.h  tls_hash.cc  tls_hash.h  tls_hkdf.cc
src/lib/network/websocket/: websocket_client.cc  websocket_client.h
src/platform/: platform.h
src/platform/console/: README.md
src/platform/fs/: README.md
src/platform/fs/posix/: directory_iterator.cc
src/platform/fs/uefi/: directory_iterator.cc
src/platform/fs/windows/: directory.cc  directory_iterator.cc  file.cc
src/platform/kernel/android/: README.md  dl.cc  dl.h  elf.h  jni.cc  jni.h
src/platform/kernel/freebsd/: README.md  syscall.h
src/platform/kernel/ios/: README.md
src/platform/kernel/linux/: README.md  (+1 more)
src/platform/memory/: README.md
src/platform/screen/: README.md  screen.h
src/platform/socket/: README.md
src/platform/system/: README.md  environment.h  machine_id.h  pty.h  shell_process.h  system_info.cc
tests/: array_storage_tests.h  base64_tests.h  binary_io_tests.h  djb2_tests.h  dns_tests.h  double_tests.h  ecc_tests.h  environment_tests.h  file_system_tests.h  image_tests.h  ip_address_tests.h  jpeg_tests.h  memory_tests.h  pipe_tests.h  prng_tests.h  process_tests.h  random_tests.h  result_tests.h  screen_tests.h  sha_tests.h  size_report_tests.h  socket_tests.h  span_tests.h  string_formatter_tests.h  string_tests.h  tls_tests.h  uuid_tests.h  vector_tests.h  websocket_tests.h
tools/pic-transform/: CMakeLists.txt  README.md
tools/poly-transform/: CMakeLists.txt  PolyTransformOpt.cpp  PolyTransformPass.cpp  PolyTransformPass.h  README.md
tools/pyloader/: loader.py
(+31 files in other folders)
